# bio-visualizer-mirror

./: .gitignore  Cargo.toml  README.md  bitbucket-pipelines.yml  build.rs  build_package.py  build_setup.py
crates/app/: Cargo.toml
crates/app-core-dylib/: Cargo.toml  build.rs
crates/app-core-dylib/src/: lib.rs
crates/app/src/: app.rs  app_area.rs  app_context.rs  area.rs  areas.rs  args.rs  components.rs  engine_controller.rs  launcher_comm.rs  main.rs  video.rs  view.rs  windows_resize.rs
crates/app/src/app_area/: app_save_context.rs  editor.rs  frame_display.rs  main_output.rs  menu_bar.rs  node_blueprint.rs  node_graph_view.rs  output_panel.rs  playback_controls.rs  title_bar.rs
crates/app/src/app_area/editor/: editor_area.rs  editor_state_context.rs  graph_executor_manager.rs  node_graph.rs  output_controller.rs  output_panel.rs  playback_controls.rs  playback_state.rs  snarl_style.rs
crates/app/src/app_area/main_output/: main_output_area.rs  main_output_area_old.rs  output_controls.rs  output_window.rs
crates/app/src/app_area/menu_bar/: import_button.rs  menu_bar_button.rs  title_bar.rs
crates/app/src/app_area/node_blueprint/: context_menu.rs  node_item.rs
crates/app/src/app_area/title_bar/: title_bar_area.rs  toolbar.rs  tools.rs
crates/app/src/area/: editor.rs  graph_executor_manager.rs  node_graph.rs  node_graph_view.rs  output_controller.rs  output_panel.rs  playback_controls.rs  title_bar.rs
crates/app/src/area/editor/: editor_area.rs  graph_executor_manager.rs  output_controller.rs  output_panel.rs  playback_controls.rs  playback_state.rs  snarl_style.rs
crates/app/src/area/title_bar/: toolbar.rs
crates/app/src/areas/: node_blueprint.rs
crates/app/src/components/: frame_display.rs  menu_bar.rs
crates/app/src/components/menu_bar/: import_button.rs
crates/app/src/components/node_component/: base_node.rs  mod.rs  node.rs
crates/app/src/ui/: mod.rs  node_blueprint.rs
crates/app/src/ui/menu_buttons/: menu_bar.rs  mod.rs
crates/app/src/video/: video_controller.rs  video_frame.rs
crates/editor/: Cargo.toml  build.rs
crates/editor/src/: args.rs  main.rs
crates/editor/src/components/: frame_display.rs
crates/engine/: Cargo.toml  README.md
crates/engine/shaders/: internal_blit.wgsl
crates/engine/src/: app.rs  core.rs  effect.rs  engine.rs  engine_errors.rs  engine_outpost.rs  errors.rs  executor_test.rs  frame_handler.rs  frame_librarian.rs  frame_store.rs  gpu_frame.rs  graph_executor.rs  graph_executor_effects.rs  lib.rs  node.rs  node_graph.rs  node_library.rs  node_pipelines.rs  node_render_pipeline.rs  pipeline.rs  pipelines.rs  playback.rs  player.rs  render_inbox.rs  renderer.rs  state.rs  types.rs  upload_stager.rs  video.rs
crates/engine/src/engine/: app.rs  shader.wgsl
crates/engine/src/engine_outpost/: broadcast.rs  command_sender.rs  message.rs
crates/engine/src/graph_executor/: enums.rs  errors.rs  gpu_frame.rs  node_library.rs
crates/engine/src/node/: conversions.rs  engine_node.rs  errors.rs  handler.rs  node.rs  node_definition.rs  node_library.rs
crates/engine/src/node/handler/: frame_stream_handler.rs  image_handler.rs  midi_stream_handler.rs  node_handler.rs  noise_stream_handler.rs  signal_envelope_handler.rs  timed_stream_handler.rs  video_handler.rs
crates/engine/src/node_library/: errors.rs  node.rs  node_definition.rs
crates/engine/src/node_pipelines/: compute_pipeline.rs  helpers.rs  render_pipeline.rs
crates/engine/src/node_render_pipeline/: compute_pipeline.rs  helpers.rs  pipeline_base.rs  render_pipeline.rs
crates/engine/src/pipeline/: common.rs  dynamic_pipeline.rs
crates/engine/src/pipelines/: brightness_pipeline.rs  dynamic_pipeline.rs  grayscale_pipeline.rs  invert_pipeline.rs
crates/engine/src/pipelines/shaders/: brightness_shader.rs  grayscale_shader.rs  invert_shader.rs  mod.rs
crates/engine/src/renderer/: effect.rs  pipelines.rs  shader.wgsl  surface.rs  upload.rs  upload_stager.rs
crates/engine/src/renderer/pipelines/: color_grading.rs  common.rs  fullscreen.rs
crates/engine/src/renderer/shaders/: fullscreen.wgsl  (+1 more)
crates/launcher/: Cargo.toml  build.rs
crates/launcher-core/: Cargo.toml
crates/launcher-core/src/: args.rs  lib.rs  receiver.rs
crates/launcher-core/src/other_instances/: oi_messager.rs
crates/launcher-core/src/receiver/: ui.rs
crates/launcher/src/: args.rs  main.rs  other_instances.rs  receiver.rs  sender.rs  ui_old.rs
crates/launcher/src/other_instances/: instance_lock.rs
crates/launcher/src/receiver/: ui.rs  worker.rs
crates/media/: Cargo.toml  build.rs
crates/media/src/: cast_slice.rs  ffmpeg_tools.rs  fps.rs  frame.rs  lib.rs  midi.rs  noise.rs  playback_stream.rs  video_player.rs
crates/media/src/ffmpeg_tools/: ffmpeg_video.rs  impls.rs
crates/media/src/fps/: resampler.rs  switch_timer.rs
crates/media/src/frame/: buffer.rs  producer.rs  streams.rs
crates/media/src/midi/: read_midi_input.rs  steams.rs  streams.rs
crates/media/src/noise/: streams.rs
crates/media/src/playback_stream/: buffering_suggestor.rs
crates/render_testing/: Cargo.toml
crates/render_testing/src/: generate_test.rs  main.rs
crates/ui/: Cargo.toml
crates/ui/src/: app.rs  application.rs  launcher.rs  lib.rs  main_window.rs  video_frame.rs
crates/ui/src/components/: effects.rs  mod.rs  playback_controls.rs  video_controller.rs  video_frame.rs
crates/util/: Cargo.toml  build.rs
crates/util/src/: cast_slice.rs  channels.rs  crash_reporting.rs  debug_log.rs  drop_join_thread.rs  eprint_and_exit.rs  fuzzy_search.rs  gcd.rs  lib.rs  local_data.rs  messages.rs  read_write_at.rs  rolling_avg.rs  saved_file.rs  stop_signals.rs  strn.rs  ui.rs  uid.rs  version.rs  windows_build.rs  windows_exe.rs
crates/util/src/channels/: conn_n.rs  message_channel.rs  request_channel.rs
crates/util/src/crash_reporting/: crash_reporting_impl.rs
crates/util/src/debug_log/: panic_on_errors.rs
crates/util/src/local_data/: project.rs
crates/util/src/stop_signals/: passthrough.rs  polling.rs
crates/util/src/ui/: icons.rs
crates/util/src/version/: prelude.rs
(+123 files in other folders)
