[workspace]
members = [
  "crates/editor",         # bin
  "crates/launcher",       # bin
  "crates/app-core",       # lib
  "crates/app-core-dylib", # cdylib
  "crates/editor-core",    # lib
  "crates/launcher-core",  # lib
  "crates/util",           # lib
  "crates/media",          # lib
  "crates/engine",         # lib
]
resolver = "3"

[workspace.package]
version = "0.2.0"
edition = "2024"

[workspace.dependencies]
app-core = { path = "crates/app-core" }
editor-core = { path = "crates/editor-core" }
launcher-core = { path = "crates/launcher-core" }
engine = { path = "crates/engine" }
media = { path = "crates/media" }
util = { path = "crates/util" }

clap = { version = "4.5.51", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
egui = { version = "0.33", features = ["serde"] }
egui-wgpu = "0.33.3"
egui_extras = "0.33.3"
windows-sys = "0.59"
image = { version = "0.25" }

# If one thread panics, make all the threads panic. This does disable the
# ability for us to handle a thread panicking, but I don't think there's
# anywhere we'd care about doing that anyway.
[profile.dev]
panic = "abort"
[profile.release]
panic = "abort"

# Speed optimized profile ready for packaging.
[profile.package-fast]
inherits = "release"
lto = "fat"          # Max link-time optimizations
codegen-units = 1    # One codegen unit per crate (easier optimization)
strip = "symbols"    # Strip symbols

# Size optimized profile ready for packaging.
[profile.package-small]
inherits = "release"
opt-level = "s"      # optimize for size
lto = "fat"          # Max link-time optimizations
codegen-units = 1    # One codegen unit per crate (easier optimization)
strip = "symbols"    # Strip symbols
