[package]
name = "app-core-dylib"
edition = "2024"
version = { workspace = true }
publish = false

[lib]
crate-type = ["cdylib"]
name = "appcore"

[dependencies]
editor-core = { workspace = true }
launcher-core = { workspace = true }

[build-dependencies]
util = { workspace = true, features = ["windows_build", "version"] }
