[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
engine = { version = "0.1.0", path = "../engine" }
media = { version = "0.1.0", path = "../media" }
env_logger = "0.11"
egui-wgpu = "0.33.3"
thiserror = "2"
rfd = "0.17.2"
egui-phosphor = "0.11"
egui-snarl = { version = "0.9", features = ["serde"] }
slotmap = "1.0"
util = { version = "0.1.0", path = "../util" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
clap = { version = "4.5.51", features = ["derive"] }

[features]
# Disables the console that automatically opens when you run an executable on
# Windows.
no-console = []
