[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
engine = { workspace = true }
media = { workspace = true }
eframe = { version = "0.33", default-features = false, features = [
    "default_fonts",
    "wgpu",
    "glow",
    "persistence",
] }
egui = { workspace = true }
egui-wgpu = { workspace = true }
rfd = "0.17.2"
egui-phosphor = "0.11"
egui-snarl = { version = "0.9", features = ["serde"] }
util = { workspace = true }
serde = { workspace = true }
postcard = { version = "1.0", features = ["alloc"] }
clap = { workspace = true }
raw-window-handle = "0.6"

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
] }

[features]
# Disables the console that automatically opens when you run an executable on
# Windows.
no-console = []