[package]
name = "editor"
edition = "2024"
version = { workspace = true }

[dependencies]
engine = { workspace = true }
media = { workspace = true }
eframe = { version = "0.33", default-features = false, features = [
    "default_fonts",
    "wgpu",
    "glow",
    "persistence",
] }
egui = { workspace = true }
egui-wgpu = { workspace = true }
rfd = "0.17.2"
egui-phosphor = "0.11"
egui-snarl = { version = "0.9", features = ["serde"] }
util = { workspace = true, features = [
    "local_data",
    "ui",
    "debug_log",
    "version",
    "channels",
    "crash_reporting",
] }
serde = { workspace = true }
postcard = { version = "1.0", features = ["alloc"] }
clap = { workspace = true }
raw-window-handle = "0.6"

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
] }

[build-dependencies]
util = { workspace = true, features = ["windows_exe", "version"] }

[features]
# Indicates that the app is being built to be distributed.
build-package = []
