[package]
name = "editor"
edition = "2024"
version = { workspace = true }

[dependencies]
editor-core = { workspace = true, optional = true }
app-core = { workspace = true, optional = true }

[build-dependencies]
util = { workspace = true, features = ["windows_exe", "version"] }

[features]
default = ["link-static"]
link-static = ["dep:editor-core"]
link-dylib = ["dep:app-core"]
no-windows-console = []
