[package]
name = "engine"
version = "0.1.0"
edition = "2024"

[dependencies]
winit = "0.30"
wgpu = { version = "27", default-features = false, features = ["vulkan", "metal", "wgsl"] }
pollster = "0.4"
rand = "0.10"
util = { workspace = true }
media = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }