[package]
name = "engine"
edition = "2024"
version = { workspace = true }

[dependencies]
winit = "0.30"
wgpu = { version = "27", default-features = false, features = [
    "vulkan",
    "metal",
    "wgsl",
] }
pollster = "0.4"
rand = "0.10"
util = { workspace = true, features = [
    "uid",
    "debug_log",
    "local_data",
    "channels",
] }
media = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
