[package]
name = "launcher"
edition = "2024"
version = { workspace = true }

[dependencies]
launcher-core = { workspace = true }

[build-dependencies]
util = { workspace = true, features = ["windows_exe", "version"] }

[features]
# Indicates that the app is being built to be distributed.
build-package = []
