[package]
name = "ui"
version = "0.1.0"
edition = "2024"

[dependencies]
egui = "0.33.0"
eframe = { version = "0.33.0", default-features = false, features = [
    "accesskit",     # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
    "wayland",       # To support Linux (and CI)
    "x11",           # To support older Linux distributions (restores one of the default features)
    "wgpu",
] }
engine = { version = "0.1.0", path = "../engine" }
egui-wgpu = "0.33.0"
media = { version = "0.1.0", path = "../media" }
rfd = "0.15.4"
wgpu = "27.0.0"