[package]
name = "ui"
version = "0.1.0"
edition = "2024"

[dependencies]
egui = "0.33.0"
eframe = { version = "0.33.0", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "wgpu",
] }
engine = { version = "0.1.0", path = "../engine" }
egui-wgpu = "0.33.0"
media = { version = "0.1.0", path = "../media" }
rfd = "0.15.4"