[package]
name = "util"
version = "0.1.0"
edition = "2024"

[dependencies]
nucleo-matcher = "0.3.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
signal-hook = { version = "0.3.18", default-features = false }
thiserror = "2"
time = { version = "0.3.44", features = [
    "local-offset",
    "serde-human-readable",
    "macros",
] }
eframe = { version = "0.33" }
egui = { version = "0.33", features = ["serde"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = ">=0.59, <=0.61", features = [
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_Console",
] }
