[package]
name = "util"
version = "0.1.0"
edition = "2024"

[dependencies]
nucleo-matcher = "0.3.1"
serde = { workspace = true }
serde_json = { workspace = true }
signal-hook = { version = "0.3.18", default-features = false }
thiserror = { workspace = true }
time = { version = "0.3.44", features = [
    "local-offset",
    "serde-human-readable",
    "macros",
] }
eframe = { version = "0.33", default-features = false, features = [
    "default_fonts",
    "wgpu",
    "persistence",
] }
egui = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true, features = [
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_Console",
] }
