[package]
name = "util"
edition = "2024"
version = { workspace = true }

[dependencies]
nucleo-matcher = { optional = true, version = "0.3" }
serde = { optional = true, workspace = true }
serde_json = { optional = true, workspace = true }
signal-hook = { optional = true, version = "0.3", default-features = false }
thiserror = { optional = true, workspace = true }
time = { optional = true, version = "0.3", features = [
    "local-offset",
    "serde-human-readable",
    "macros",
] }
eframe = { optional = true, version = "0.33", default-features = false, features = [
    "default_fonts",
    "wgpu",
    "persistence",
] }
egui = { optional = true, workspace = true }
image = { optional = true, workspace = true }

[target.'cfg(unix)'.dependencies]
libc = { optional = true, version = "0.2" }

[target.'cfg(windows)'.dependencies]
windows-sys = { optional = true, workspace = true, features = [
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_Console",
] }
winresource = { optional = true, version = "0.1" }

[build-dependencies]
toml = { version = "1.1", optional = true }

[features]
cast_slice = []
channels = ["dep:thiserror"]
crash_reporting = ["dep:time", "local_data"]
debug_log = ["dep:time"]
drop_join_thread = []
fuzzy_search = ["dep:nucleo-matcher", "debug_log"]
gcd = []
local_data = [
    "dep:thiserror",
    "dep:time",
    "debug_log",
    "read_write_at",
    "saved_file",
    "uid",
    "version",
]
read_write_at = []
rolling_avg = []
saved_file = ["dep:serde", "dep:serde_json", "dep:thiserror", "debug_log"]
stop_signals = [
    "dep:signal-hook",
    "dep:libc",
    "dep:windows-sys",
    "cast_slice",
    "debug_log",
]
strn = ["dep:thiserror"]
ui = ["dep:eframe", "dep:egui", "dep:image", "debug_log"]
uid = ["dep:serde", "dep:thiserror"]
version = ["dep:toml"]
windows_exe = ["dep:winresource", "version"]
